[gd_scene load_steps=35 format=2]

[ext_resource path="res://scenes/scripts/levels/7Zeppelin.gd" type="Script" id=1]
[ext_resource path="res://scenes/env/Pause.tscn" type="PackedScene" id=2]
[ext_resource path="res://audio/7Zeppelin.ogg" type="AudioStream" id=3]
[ext_resource path="res://scenes/env/DeathScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/backgrounds/BackgroundThirdAct.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/env/HoloWall.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/env/KoumissBottle.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/scripts/env/Finish.gd" type="Script" id=8]
[ext_resource path="res://scenes/lang/Rus_Theme_Font.tres" type="Theme" id=9]
[ext_resource path="res://scenes/textures/backgrounds/win.png" type="Texture" id=10]
[ext_resource path="res://scenes/textures/env/finish_flag.png" type="Texture" id=11]
[ext_resource path="res://audio/win/1.ogg" type="AudioStream" id=12]
[ext_resource path="res://audio/win/2.ogg" type="AudioStream" id=13]
[ext_resource path="res://audio/win/3.ogg" type="AudioStream" id=14]
[ext_resource path="res://audio/win/4.ogg" type="AudioStream" id=15]
[ext_resource path="res://scenes/env/TileMap.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/env/Button.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/scripts/env/Lever.gd" type="Script" id=18]
[ext_resource path="res://scenes/textures/env/lever_off.png" type="Texture" id=19]
[ext_resource path="res://scenes/textures/env/lever_on.png" type="Texture" id=20]
[ext_resource path="res://scenes/env/Lever.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/enemies/HipptyHop.tscn" type="PackedScene" id=22]
[ext_resource path="res://scenes/enemies/Timmy.tscn" type="PackedScene" id=23]
[ext_resource path="res://scenes/enemies/ToothWarrior.tscn" type="PackedScene" id=24]
[ext_resource path="res://scenes/enemies/Stalker.tscn" type="PackedScene" id=25]
[ext_resource path="res://scenes/Mirza.tscn" type="PackedScene" id=26]
[ext_resource path="res://scenes/env/Dialogue_node.tscn" type="PackedScene" id=27]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.8097, 233.726 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.352941, 0.372549, 0.819608, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.235294, 0.247059, 0.517647, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.819608, 0.352941, 0.505882, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.482353, 0.207843, 0.298039, 1 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 28.4277, 23.2052 )

[node name="7Zeppelin" type="Node2D"]
script = ExtResource( 1 )

[node name="Pause" parent="." instance=ExtResource( 2 )]

[node name="Music" type="AudioStreamPlayer" parent="Pause"]
stream = ExtResource( 3 )
autoplay = true
bus = "Music"

[node name="DeathScreen" parent="." instance=ExtResource( 4 )]

[node name="BackgroundThirdAct" parent="." instance=ExtResource( 5 )]
editor/display_folded = true

[node name="background_3act" parent="BackgroundThirdAct/ParallaxBackground/ParallaxLayer" index="0"]
position = Vector2( -269.173, -2699.09 )

[node name="HoloWall1" parent="." instance=ExtResource( 6 )]
position = Vector2( 643, -583 )
rotation = 1.5708

[node name="HoloWall2" parent="." instance=ExtResource( 6 )]
position = Vector2( 124.306, 691.705 )
rotation = 1.5708

[node name="HoloWall3" parent="." instance=ExtResource( 6 )]
position = Vector2( 4.094, -583 )
rotation = 1.5708

[node name="HoloWall4" parent="." instance=ExtResource( 6 )]
position = Vector2( 963.019, -1225.86 )

[node name="HoloWall5" parent="." instance=ExtResource( 6 )]
position = Vector2( 2304.35, 389.356 )
on = false

[node name="HoloWallFinish" parent="." instance=ExtResource( 6 )]
position = Vector2( 1279.69, -860.936 )

[node name="KoumissBottle1" parent="." instance=ExtResource( 7 )]
position = Vector2( 642.425, 225.441 )

[node name="KoumissBottle2" parent="." instance=ExtResource( 7 )]
position = Vector2( 3120.9, -353.896 )

[node name="KoumissBottle3" parent="." instance=ExtResource( 7 )]
position = Vector2( 3171.5, -793.223 )

[node name="Finish" type="Area2D" parent="."]
pause_mode = 2
editor/display_folded = true
position = Vector2( 1064.5, -1123.64 )
script = ExtResource( 8 )
next_level = "8Hold"
number_of_level = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Finish"]
position = Vector2( -17.187, 200.909 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="Finish"]
editor/display_folded = true

[node name="FinishContainer" type="Control" parent="Finish/CanvasLayer"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 9 )

[node name="win" type="Sprite" parent="Finish/CanvasLayer/FinishContainer"]
position = Vector2( 640, 360 )
scale = Vector2( 6, 6 )
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="Finish/CanvasLayer/FinishContainer"]
margin_left = 630.0
margin_top = 130.0
margin_right = 700.0
margin_bottom = 155.0
text = "Победа!"
align = 1
valign = 1
uppercase = true

[node name="Buttons" type="VBoxContainer" parent="Finish/CanvasLayer/FinishContainer"]
margin_left = 578.0
margin_top = 270.0
margin_right = 702.0
margin_bottom = 330.0

[node name="NextLevel" type="Button" parent="Finish/CanvasLayer/FinishContainer/Buttons"]
margin_right = 124.0
margin_bottom = 28.0
theme = ExtResource( 9 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
text = "Продолжить"

[node name="Quit" type="Button" parent="Finish/CanvasLayer/FinishContainer/Buttons"]
margin_top = 32.0
margin_right = 124.0
margin_bottom = 60.0
theme = ExtResource( 9 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
text = "Выход в меню"

[node name="Results" type="VBoxContainer" parent="Finish/CanvasLayer/FinishContainer"]
margin_left = 550.0
margin_top = 400.0
margin_right = 730.0
margin_bottom = 448.0
alignment = 1

[node name="EnemiesKilled" type="Label" parent="Finish/CanvasLayer/FinishContainer/Results"]
margin_right = 180.0
margin_bottom = 22.0
align = 1
valign = 1
autowrap = true

[node name="BottlesCollected" type="Label" parent="Finish/CanvasLayer/FinishContainer/Results"]
margin_top = 26.0
margin_right = 180.0
margin_bottom = 48.0
align = 1
valign = 1
autowrap = true

[node name="finish_flag" type="Sprite" parent="Finish"]
position = Vector2( 3, 373 )
scale = Vector2( 2, 2 )
texture = ExtResource( 11 )

[node name="Sounds" type="Node2D" parent="Finish"]
editor/display_folded = true

[node name="Win1" type="AudioStreamPlayer" parent="Finish/Sounds"]
stream = ExtResource( 12 )
bus = "Effects"

[node name="Win2" type="AudioStreamPlayer" parent="Finish/Sounds"]
stream = ExtResource( 13 )
bus = "Effects"

[node name="Win3" type="AudioStreamPlayer" parent="Finish/Sounds"]
stream = ExtResource( 14 )
bus = "Effects"

[node name="Win4" type="AudioStreamPlayer" parent="Finish/Sounds"]
stream = ExtResource( 15 )
bus = "Effects"

[node name="TileMap" parent="." instance=ExtResource( 16 )]
editor/display_folded = true
tile_data = PoolIntArray( -1966081, 5, 0, -2031616, 5, 0, -2031615, 5, 0, -2031614, 5, 0, -2031613, 5, 0, -2031612, 5, 0, -2031611, 5, 0, -2031610, 5, 0, -2031609, 5, 0, -2031608, 5, 0, -2031607, 5, 0, -2031606, 5, 0, -2031605, 5, 0, -2031604, 5, 0, -2031603, 5, 0, -2031602, 5, 0, -2031601, 5, 0, -2031600, 5, 0, -2031599, 5, 0, -2031598, 5, 0, -2031597, 5, 0, -2031596, 5, 0, -2031595, 5, 0, -2031594, 5, 0, -2031593, 5, 0, -2031592, 5, 0, -2031591, 5, 0, -2031590, 5, 0, -2031589, 5, 0, -2031588, 5, 0, -2031587, 5, 0, -2031586, 5, 0, -2031585, 5, 0, -2031584, 5, 0, -2031583, 20, 0, -2031575, 20, 0, -2031574, 5, 0, -2031573, 5, 0, -2031572, 5, 0, -2031571, 5, 0, -2031570, 5, 0, -2031569, 5, 0, -2031568, 5, 0, -2031567, 5, 0, -2031566, 5, 0, -1900545, 5, 0, -1966080, 5, 0, -1966079, 5, 0, -1966078, 5, 0, -1966077, 5, 0, -1966076, 5, 0, -1966075, 5, 0, -1966074, 5, 0, -1966073, 5, 0, -1966072, 5, 0, -1966071, 5, 0, -1966070, 5, 0, -1966069, 5, 0, -1966068, 5, 0, -1966067, 5, 0, -1966066, 5, 0, -1966065, 5, 0, -1966064, 5, 0, -1966063, 5, 0, -1966062, 5, 0, -1966061, 5, 0, -1966060, 5, 0, -1966059, 5, 0, -1966058, 5, 0, -1966057, 5, 0, -1966056, 5, 0, -1966055, 5, 0, -1966054, 5, 0, -1966053, 5, 0, -1966052, 5, 0, -1966051, 5, 0, -1966050, 5, 0, -1966049, 5, 0, -1966048, 5, 0, -1966047, 20, 0, -1966039, 20, 0, -1966038, 5, 0, -1966037, 5, 0, -1966036, 5, 0, -1966035, 5, 0, -1966034, 5, 0, -1966033, 5, 0, -1966032, 5, 0, -1966031, 5, 0, -1966030, 5, 0, -1835009, 5, 0, -1900544, 5, 0, -1900543, 5, 0, -1900542, 5, 0, -1900541, 5, 0, -1900540, 5, 0, -1900539, 5, 0, -1900538, 5, 0, -1900537, 5, 0, -1900536, 5, 0, -1900535, 5, 0, -1900534, 5, 0, -1900533, 5, 0, -1900532, 5, 0, -1900531, 5, 0, -1900530, 5, 0, -1900529, 5, 0, -1900528, 5, 0, -1900527, 5, 0, -1900526, 5, 0, -1900525, 5, 0, -1900524, 5, 0, -1900523, 5, 0, -1900522, 5, 0, -1900521, 5, 0, -1900520, 5, 0, -1900519, 5, 0, -1900518, 5, 0, -1900517, 5, 0, -1900516, 5, 0, -1900515, 5, 0, -1900514, 5, 0, -1900513, 5, 0, -1900512, 5, 0, -1900511, 20, 0, -1900503, 20, 0, -1900502, 5, 0, -1900501, 5, 0, -1900500, 5, 0, -1900499, 5, 0, -1900498, 5, 0, -1900497, 5, 0, -1900496, 5, 0, -1900495, 5, 0, -1900494, 5, 0, -1769473, 5, 0, -1835008, 5, 0, -1835007, 5, 0, -1835006, 5, 0, -1835005, 5, 0, -1835004, 5, 0, -1835003, 5, 0, -1835002, 5, 0, -1835001, 5, 0, -1835000, 5, 0, -1834999, 5, 0, -1834998, 5, 0, -1834997, 5, 0, -1834996, 5, 0, -1834995, 5, 0, -1834994, 5, 0, -1834993, 5, 0, -1834992, 5, 0, -1834991, 5, 0, -1834990, 5, 0, -1834989, 5, 0, -1834988, 5, 0, -1834987, 5, 0, -1834986, 5, 0, -1834985, 5, 0, -1834984, 5, 0, -1834983, 5, 0, -1834982, 5, 0, -1834981, 5, 0, -1834980, 5, 0, -1834979, 5, 0, -1834978, 5, 0, -1834977, 5, 0, -1834976, 5, 0, -1834975, 20, 0, -1834967, 20, 0, -1834966, 5, 0, -1834965, 5, 0, -1834964, 5, 0, -1834963, 5, 0, -1834962, 5, 0, -1834961, 5, 0, -1834960, 5, 0, -1834959, 5, 0, -1834958, 5, 0, -1703937, 5, 0, -1769472, 5, 0, -1769471, 5, 0, -1769470, 5, 0, -1769469, 5, 0, -1769468, 5, 0, -1769467, 5, 0, -1769466, 5, 0, -1769465, 5, 0, -1769464, 5, 0, -1769463, 5, 0, -1769462, 5, 0, -1769461, 5, 0, -1769460, 5, 0, -1769459, 5, 0, -1769458, 5, 0, -1769457, 5, 0, -1769456, 5, 0, -1769455, 5, 0, -1769454, 5, 0, -1769453, 5, 0, -1769452, 5, 0, -1769451, 5, 0, -1769450, 5, 0, -1769449, 5, 0, -1769448, 5, 0, -1769447, 5, 0, -1769446, 5, 0, -1769445, 5, 0, -1769444, 5, 0, -1769443, 5, 0, -1769442, 5, 0, -1769441, 5, 0, -1769440, 5, 0, -1769439, 20, 0, -1769431, 20, 0, -1769430, 5, 0, -1769429, 5, 0, -1769428, 5, 0, -1769427, 5, 0, -1769426, 5, 0, -1769425, 5, 0, -1769424, 5, 0, -1769423, 5, 0, -1769422, 5, 0, -1638401, 5, 0, -1703936, 5, 0, -1703935, 5, 0, -1703934, 5, 0, -1703933, 5, 0, -1703932, 5, 0, -1703931, 5, 0, -1703930, 5, 0, -1703929, 5, 0, -1703928, 5, 0, -1703927, 5, 0, -1703926, 5, 0, -1703925, 5, 0, -1703924, 5, 0, -1703923, 5, 0, -1703922, 5, 0, -1703921, 5, 0, -1703920, 5, 0, -1703919, 5, 0, -1703918, 5, 0, -1703917, 5, 0, -1703916, 5, 0, -1703915, 5, 0, -1703914, 5, 0, -1703913, 5, 0, -1703912, 5, 0, -1703911, 5, 0, -1703910, 5, 0, -1703909, 5, 0, -1703908, 5, 0, -1703907, 5, 0, -1703906, 5, 0, -1703905, 5, 0, -1703904, 5, 0, -1703903, 20, 0, -1703895, 20, 0, -1703894, 5, 0, -1703893, 5, 0, -1703892, 5, 0, -1703891, 5, 0, -1703890, 5, 0, -1703889, 5, 0, -1703888, 5, 0, -1703887, 5, 0, -1703886, 5, 0, -1572865, 5, 0, -1638400, 5, 0, -1638399, 5, 0, -1638398, 5, 0, -1638397, 5, 0, -1638396, 5, 0, -1638395, 5, 0, -1638394, 5, 0, -1638393, 5, 0, -1638392, 5, 0, -1638391, 5, 0, -1638390, 5, 0, -1638389, 5, 0, -1638388, 5, 0, -1638387, 5, 0, -1638386, 5, 0, -1638385, 5, 0, -1638384, 5, 0, -1638383, 5, 0, -1638382, 5, 0, -1638381, 5, 0, -1638380, 5, 0, -1638379, 5, 0, -1638378, 5, 0, -1638377, 5, 0, -1638376, 5, 0, -1638375, 5, 0, -1638374, 5, 0, -1638373, 5, 0, -1638372, 5, 0, -1638371, 5, 0, -1638370, 5, 0, -1638369, 5, 0, -1638368, 5, 0, -1638367, 20, 0, -1638359, 20, 0, -1638358, 5, 0, -1638357, 5, 0, -1638356, 5, 0, -1638355, 5, 0, -1638354, 5, 0, -1638353, 5, 0, -1638352, 5, 0, -1638351, 5, 0, -1638350, 5, 0, -1507329, 20, 0, -1572864, 20, 0, -1572863, 20, 0, -1572862, 20, 0, -1572861, 20, 0, -1572860, 20, 0, -1572859, 20, 0, -1572858, 20, 0, -1572857, 20, 0, -1572856, 20, 0, -1572855, 20, 0, -1572854, 20, 0, -1572853, 20, 0, -1572852, 20, 0, -1572851, 20, 0, -1572850, 20, 0, -1572849, 20, 0, -1572848, 20, 0, -1572847, 20, 0, -1572846, 20, 0, -1572845, 20, 0, -1572844, 20, 0, -1572843, 20, 0, -1572842, 20, 0, -1572841, 20, 0, -1572840, 20, 0, -1572839, 20, 0, -1572838, 20, 0, -1572837, 20, 0, -1572836, 20, 0, -1572835, 20, 0, -1572834, 20, 0, -1572833, 20, 0, -1572832, 20, 0, -1572831, 20, 0, -1572823, 20, 0, -1572822, 5, 0, -1572821, 5, 0, -1572820, 5, 0, -1572819, 5, 0, -1572818, 5, 0, -1572817, 5, 0, -1572816, 5, 0, -1572815, 5, 0, -1572814, 5, 0, -1441793, 20, 0, -1507287, 20, 0, -1507286, 5, 0, -1507285, 5, 0, -1507284, 5, 0, -1507283, 5, 0, -1507282, 5, 0, -1507281, 5, 0, -1507280, 5, 0, -1507279, 5, 0, -1507278, 5, 0, -1376257, 20, 0, -1441751, 20, 0, -1441750, 5, 0, -1441749, 5, 0, -1441748, 5, 0, -1441747, 5, 0, -1441746, 5, 0, -1441745, 5, 0, -1441744, 5, 0, -1441743, 5, 0, -1441742, 5, 0, -1310721, 20, 0, -1376215, 20, 0, -1376214, 5, 0, -1376213, 5, 0, -1376212, 5, 0, -1376211, 5, 0, -1376210, 5, 0, -1376209, 5, 0, -1376208, 5, 0, -1376207, 5, 0, -1376206, 5, 0, -1245185, 20, 0, -1310679, 20, 0, -1310678, 5, 0, -1310677, 5, 0, -1310676, 5, 0, -1310675, 5, 0, -1310674, 5, 0, -1310673, 5, 0, -1310672, 5, 0, -1310671, 5, 0, -1310670, 5, 0, -1179649, 20, 0, -1245170, 20, 0, -1245169, 20, 0, -1245168, 20, 0, -1245167, 20, 0, -1245166, 20, 0, -1245165, 20, 0, -1245164, 20, 0, -1245143, 20, 0, -1245142, 5, 0, -1245141, 5, 0, -1245140, 5, 0, -1245139, 5, 0, -1245138, 5, 0, -1245137, 5, 0, -1245136, 5, 0, -1245135, 5, 0, -1245134, 5, 0, -1114113, 20, 0, -1179634, 20, 0, -1179633, 20, 0, -1179632, 20, 0, -1179631, 20, 0, -1179630, 20, 0, -1179629, 20, 0, -1179628, 20, 0, -1179607, 20, 0, -1179606, 5, 0, -1179605, 5, 0, -1179604, 5, 0, -1179603, 5, 0, -1179602, 5, 0, -1179601, 5, 0, -1179600, 5, 0, -1179599, 5, 0, -1179598, 5, 0, -1048577, 20, 0, -1114098, 20, 0, -1114097, 20, 0, -1114093, 20, 0, -1114092, 20, 0, -1114071, 20, 0, -1114070, 20, 0, -1114069, 20, 0, -1114068, 20, 0, -1114067, 20, 0, -1114066, 20, 0, -1114065, 20, 0, -1114064, 20, 0, -1114063, 20, 0, -1114062, 20, 0, -983041, 20, 0, -1048562, 20, 0, -1048561, 20, 0, -1048557, 20, 0, -1048556, 20, 0, -1048526, 20, 0, -917505, 20, 0, -983026, 20, 0, -983025, 20, 0, -982990, 20, 0, -851969, 20, 0, -917490, 20, 0, -917489, 20, 0, -917454, 20, 0, -786433, 20, 0, -851954, 20, 0, -851953, 20, 0, -851918, 20, 0, -720897, 20, 0, -786418, 20, 0, -786417, 20, 0, -786391, 20, 0, -786390, 20, 0, -786389, 20, 0, -786388, 20, 0, -786387, 20, 0, -786386, 20, 0, -786385, 20, 0, -786384, 20, 0, -786383, 20, 0, -786382, 20, 0, -655361, 20, 0, -720894, 26, 0, -720893, 15, 0, -720892, 15, 0, -720891, 15, 0, -720890, 15, 0, -720889, 25, 0, -720884, 26, 0, -720883, 15, 0, -720882, 20, 0, -720881, 15, 0, -720880, 15, 0, -720879, 15, 0, -720878, 15, 0, -720877, 15, 0, -720876, 15, 0, -720875, 15, 0, -720874, 15, 0, -720873, 15, 0, -720872, 15, 0, -720871, 15, 0, -720870, 25, 0, -720855, 20, 0, -720854, 5, 0, -720853, 5, 0, -720852, 5, 0, -720851, 5, 0, -720850, 5, 0, -720849, 5, 0, -720848, 5, 0, -720847, 5, 0, -720846, 5, 0, -589825, 20, 0, -655358, 20, 0, -655357, 5, 0, -655356, 5, 0, -655355, 5, 0, -655354, 5, 0, -655353, 20, 0, -655348, 20, 0, -655347, 5, 0, -655346, 5, 0, -655345, 5, 0, -655344, 5, 0, -655343, 5, 0, -655342, 5, 0, -655341, 5, 0, -655340, 5, 0, -655339, 5, 0, -655338, 5, 0, -655337, 5, 0, -655336, 5, 0, -655335, 5, 0, -655334, 20, 0, -655319, 20, 0, -655318, 5, 0, -655317, 5, 0, -655316, 5, 0, -655315, 5, 0, -655314, 5, 0, -655313, 5, 0, -655312, 5, 0, -655311, 5, 0, -655310, 5, 0, -524289, 20, 0, -589822, 20, 0, -589821, 5, 0, -589820, 5, 0, -589819, 5, 0, -589818, 5, 0, -589817, 20, 0, -589812, 20, 0, -589811, 5, 0, -589810, 5, 0, -589809, 5, 0, -589808, 5, 0, -589807, 5, 0, -589806, 5, 0, -589805, 5, 0, -589804, 5, 0, -589803, 5, 0, -589802, 5, 0, -589801, 5, 0, -589800, 5, 0, -589799, 5, 0, -589798, 20, 0, -589783, 20, 0, -589782, 5, 0, -589781, 5, 0, -589780, 5, 0, -589779, 5, 0, -589778, 5, 0, -589777, 5, 0, -589776, 5, 0, -589775, 5, 0, -589774, 5, 0, -458753, 20, 0, -524286, 20, 0, -524285, 20, 0, -524284, 20, 0, -524283, 20, 0, -524282, 20, 0, -524281, 20, 0, -524276, 20, 0, -524275, 20, 0, -524274, 20, 0, -524273, 20, 0, -524272, 20, 0, -524271, 20, 0, -524270, 20, 0, -524269, 20, 0, -524268, 20, 0, -524267, 20, 0, -524266, 20, 0, -524265, 20, 0, -524264, 20, 0, -524263, 20, 0, -524262, 20, 0, -524247, 20, 0, -524246, 5, 0, -524245, 5, 0, -524244, 5, 0, -524243, 5, 0, -524242, 5, 0, -524241, 5, 0, -524240, 5, 0, -524239, 5, 0, -524238, 5, 0, -393217, 20, 0, -458711, 20, 0, -458710, 20, 0, -458709, 20, 0, -458708, 20, 0, -458707, 20, 0, -458706, 20, 0, -458705, 20, 0, -458704, 20, 0, -458703, 20, 0, -458702, 20, 0, -327681, 20, 0, -393188, 26, 0, -393187, 16, 0, -393186, 17, 0, -393166, 20, 0, -262145, 20, 0, -327652, 20, 0, -327651, 20, 0, -327650, 21, 0, -327649, 17, 0, -327630, 20, 0, -196609, 20, 0, -262116, 20, 0, -262115, 20, 0, -262114, 20, 0, -262113, 21, 0, -262112, 17, 0, -262094, 20, 0, -131073, 20, 0, -196601, 5, 0, -196579, 20, 0, -196578, 20, 0, -196577, 20, 0, -196576, 21, 0, -196575, 17, 0, -196558, 20, 0, -65537, 20, 0, -131065, 5, 0, -131060, 5, 0, -131042, 20, 0, -131041, 20, 0, -131040, 20, 0, -131039, 21, 0, -131038, 17, 0, -131031, 20, 0, -131030, 20, 0, -131029, 20, 0, -131028, 20, 0, -131027, 20, 0, -131026, 20, 0, -131025, 20, 0, -131024, 20, 0, -131023, 20, 0, -131022, 20, 0, -1, 20, 0, -65529, 5, 0, -65524, 5, 0, -65505, 20, 0, -65504, 20, 0, -65503, 20, 0, -65502, 21, 0, -65501, 17, 0, -65495, 20, 0, -65494, 5, 0, -65493, 5, 0, -65492, 5, 0, -65491, 5, 0, -65490, 5, 0, -65489, 5, 0, -65488, 5, 0, -65487, 5, 0, -65486, 5, 0, 65535, 20, 0, 7, 5, 0, 12, 5, 0, 32, 20, 0, 33, 20, 0, 34, 20, 0, 35, 23, 0, 36, 15, 0, 37, 25, 0, 41, 20, 0, 42, 5, 0, 43, 5, 0, 44, 5, 0, 45, 5, 0, 46, 5, 0, 47, 5, 0, 48, 5, 0, 49, 5, 0, 50, 5, 0, 131071, 20, 0, 65543, 5, 0, 65548, 5, 0, 65569, 20, 0, 65570, 20, 0, 65571, 20, 0, 65572, 20, 0, 65573, 20, 0, 65577, 20, 0, 65578, 5, 0, 65579, 5, 0, 65580, 5, 0, 65581, 5, 0, 65582, 5, 0, 65583, 5, 0, 65584, 5, 0, 65585, 5, 0, 65586, 5, 0, 196607, 20, 0, 131079, 5, 0, 131084, 5, 0, 131113, 20, 0, 131114, 5, 0, 131115, 5, 0, 131116, 5, 0, 131117, 5, 0, 131118, 5, 0, 131119, 5, 0, 131120, 5, 0, 131121, 5, 0, 131122, 5, 0, 262143, 20, 0, 196615, 5, 0, 196620, 5, 0, 196631, 27, 0, 196649, 20, 0, 196650, 5, 0, 196651, 5, 0, 196652, 5, 0, 196653, 5, 0, 196654, 5, 0, 196655, 5, 0, 196656, 5, 0, 196657, 5, 0, 196658, 5, 0, 327679, 20, 0, 262151, 5, 0, 262152, 5, 0, 262153, 5, 0, 262154, 5, 0, 262155, 5, 0, 262156, 5, 0, 262167, 20, 0, 262185, 20, 0, 262186, 5, 0, 262187, 5, 0, 262188, 5, 0, 262189, 5, 0, 262190, 5, 0, 262191, 5, 0, 262192, 5, 0, 262193, 5, 0, 262194, 5, 0, 393215, 20, 0, 327703, 20, 0, 327719, 26, 0, 327720, 15, 0, 327721, 20, 0, 327722, 5, 0, 327723, 5, 0, 327724, 5, 0, 327725, 5, 0, 327726, 5, 0, 327727, 5, 0, 327728, 5, 0, 327729, 5, 0, 327730, 5, 0, 458751, 20, 0, 393239, 20, 0, 393257, 20, 0, 393258, 5, 0, 393259, 5, 0, 393260, 5, 0, 393261, 5, 0, 393262, 5, 0, 393263, 5, 0, 393264, 5, 0, 393265, 5, 0, 393266, 5, 0, 524287, 20, 0, 458775, 20, 0, 458793, 20, 0, 458794, 5, 0, 458795, 5, 0, 458796, 5, 0, 458797, 5, 0, 458798, 5, 0, 458799, 5, 0, 458800, 5, 0, 458801, 5, 0, 458802, 5, 0, 589823, 20, 0, 524290, 26, 0, 524291, 15, 0, 524292, 15, 0, 524293, 15, 0, 524294, 15, 0, 524295, 15, 0, 524296, 15, 0, 524297, 15, 0, 524298, 15, 0, 524299, 15, 0, 524300, 15, 0, 524301, 15, 0, 524302, 15, 0, 524303, 15, 0, 524304, 25, 0, 524311, 20, 0, 524318, 26, 0, 524319, 15, 0, 524320, 15, 0, 524321, 15, 0, 524322, 15, 0, 524323, 15, 0, 524324, 15, 0, 524325, 25, 0, 524329, 20, 0, 524330, 5, 0, 524331, 5, 0, 524332, 5, 0, 524333, 5, 0, 524334, 5, 0, 524335, 5, 0, 524336, 5, 0, 524337, 5, 0, 524338, 5, 0, 655359, 20, 0, 589826, 20, 0, 589827, 20, 0, 589828, 20, 0, 589829, 20, 0, 589830, 20, 0, 589831, 20, 0, 589832, 20, 0, 589833, 20, 0, 589834, 20, 0, 589835, 20, 0, 589836, 20, 0, 589837, 20, 0, 589838, 20, 0, 589839, 20, 0, 589840, 20, 0, 589847, 20, 0, 589854, 20, 0, 589855, 20, 0, 589856, 20, 0, 589857, 20, 0, 589858, 20, 0, 589859, 20, 0, 589860, 20, 0, 589861, 20, 0, 589865, 20, 0, 589866, 5, 0, 589867, 5, 0, 589868, 5, 0, 589869, 5, 0, 589870, 5, 0, 589871, 5, 0, 589872, 5, 0, 589873, 5, 0, 589874, 5, 0, 720895, 20, 0, 655362, 20, 0, 655363, 20, 0, 655364, 20, 0, 655365, 20, 0, 655366, 20, 0, 655367, 20, 0, 655368, 20, 0, 655369, 20, 0, 655370, 20, 0, 655371, 20, 0, 655372, 20, 0, 655373, 20, 0, 655374, 20, 0, 655375, 20, 0, 655376, 20, 0, 655383, 20, 0, 655390, 20, 0, 655391, 20, 0, 655392, 20, 0, 655393, 20, 0, 655394, 20, 0, 655395, 20, 0, 655396, 20, 0, 655397, 20, 0, 655401, 20, 0, 655402, 5, 0, 655403, 5, 0, 655404, 5, 0, 655405, 5, 0, 655406, 5, 0, 655407, 5, 0, 655408, 5, 0, 655409, 5, 0, 655410, 5, 0, 786431, 20, 0, 720898, 20, 0, 720899, 20, 0, 720900, 20, 0, 720901, 20, 0, 720902, 20, 0, 720903, 20, 0, 720904, 20, 0, 720905, 20, 0, 720906, 20, 0, 720907, 20, 0, 720908, 20, 0, 720909, 20, 0, 720910, 20, 0, 720911, 20, 0, 720912, 20, 0, 720919, 20, 0, 720926, 20, 0, 720927, 20, 0, 720928, 20, 0, 720929, 20, 0, 720930, 20, 0, 720931, 20, 0, 720932, 20, 0, 720933, 20, 0, 720937, 20, 0, 720938, 5, 0, 720939, 5, 0, 720940, 5, 0, 720941, 5, 0, 720942, 5, 0, 720943, 5, 0, 720944, 5, 0, 720945, 5, 0, 720946, 5, 0, 851967, 20, 0, 786434, 20, 0, 786448, 20, 0, 786455, 20, 0, 786462, 20, 0, 786469, 20, 0, 786473, 20, 0, 917503, 20, 0, 851970, 20, 0, 851984, 20, 0, 851991, 20, 0, 851998, 20, 0, 852005, 20, 0, 852009, 20, 0 )

[node name="Spikes" parent="TileMap" index="1"]
tile_data = PoolIntArray( -1048531, 1, 0, -983021, 1, 0, -983020, 1, 0, -851926, 0, 0, -851920, 0, 0, -458748, 1, 0, -262137, 0, 0, -196602, 2, 0, -196565, 0, 0, -196564, 0, 0, -196563, 0, 0, -196562, 0, 0, -196561, 0, 0, -196560, 0, 0, -196559, 0, 0 )

[node name="Button1" parent="." instance=ExtResource( 17 )]
position = Vector2( 298.577, 423.956 )
enable_timer = true
delay = 5.0

[node name="Button2" parent="." instance=ExtResource( 17 )]
position = Vector2( 643, -1354.01 )
enable_timer = true
delay = 5.0

[node name="Lever1" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 2015.6, 9.98579 )
script = ExtResource( 18 )

[node name="LeverTexture" type="AnimatedSprite" parent="Lever1"]
scale = Vector2( 2, 2 )
frames = SubResource( 6 )
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lever1"]
shape = SubResource( 7 )

[node name="Lever2" parent="." instance=ExtResource( 21 )]
position = Vector2( 12.118, -864.477 )
rotation = 1.5708

[node name="HipptyHop1" parent="." instance=ExtResource( 22 )]
position = Vector2( 1501.15, 119.641 )

[node name="HipptyHop2" parent="." instance=ExtResource( 22 )]
position = Vector2( 796.342, -214.643 )

[node name="Timmy1" parent="." instance=ExtResource( 23 )]
position = Vector2( 1935, -415 )
move_to = Vector2( 345, 340 )

[node name="Timmy2" parent="." instance=ExtResource( 23 )]
position = Vector2( 1922.71, -1414.89 )
move_to = Vector2( -600, 0 )
gravity_up = true

[node name="ToothWarrior1" parent="." instance=ExtResource( 24 )]
position = Vector2( 343.53, 459.371 )
move_to = Vector2( 600, 0 )

[node name="Stalker1" parent="." instance=ExtResource( 25 )]
position = Vector2( 74.9663, -789.303 )
Radius = 120
StretchX = 0.1

[node name="Mirza" parent="." instance=ExtResource( 26 )]
position = Vector2( 82.6604, 563.612 )
camera_bounds = [ 0, -1970, 3194, 620 ]

[node name="dialogue_node1" parent="." instance=ExtResource( 27 )]
position = Vector2( 73.6933, 533.426 )
actor_mirza = NodePath("../Mirza")
dialogue_lines = [ "actor_mirza", "Меня подкинуло аж до дирижабля Чёрных Колпаков!", "Как неожиданно и приятно...", "end_dialogue" ]

[node name="dialogue_node2" parent="." instance=ExtResource( 27 )]
position = Vector2( 640.356, -1367.87 )
actor_mirza = NodePath("../Mirza")
dialogue_lines = [ "actor_mirza", "Так, я открыл шлюзы.", "end_dialogue" ]
active = false

[node name="dialogue_node3" parent="." instance=ExtResource( 27 )]
position = Vector2( 1126.61, -846.927 )
actor_mirza = NodePath("../Mirza")
dialogue_lines = [ "actor_mirza", "Здесь проводят биологические опыты, нужно это остановить.", "Взорву дирижабли.", "end_dialogue" ]
[connection signal="collected" from="KoumissBottle1" to="." method="_on_koumiss_collected"]
[connection signal="collected" from="KoumissBottle2" to="." method="_on_koumiss_collected"]
[connection signal="collected" from="KoumissBottle3" to="." method="_on_koumiss_collected"]
[connection signal="body_entered" from="Finish" to="Finish" method="_on_finish_body_entered"]
[connection signal="pressed" from="Finish/CanvasLayer/FinishContainer/Buttons/NextLevel" to="Finish" method="_on_next_level_pressed"]
[connection signal="pressed" from="Finish/CanvasLayer/FinishContainer/Buttons/Quit" to="Finish" method="_on_quit_pressed"]
[connection signal="button_pressed" from="Button1" to="." method="_on_button1_pressed"]
[connection signal="button_pressed" from="Button2" to="." method="_on_button2_pressed"]
[connection signal="body_entered" from="Lever1" to="Lever1" method="_on_lever_body_entered"]
[connection signal="body_exited" from="Lever1" to="Lever1" method="_on_lever_body_exited"]
[connection signal="lever_pressed" from="Lever1" to="." method="_on_lever1_pressed"]
[connection signal="lever_pressed" from="Lever2" to="." method="_on_lever2_pressed"]
[connection signal="killed" from="HipptyHop1" to="." method="_on_enemy_killed"]
[connection signal="killed" from="HipptyHop2" to="." method="_on_enemy_killed"]
[connection signal="killed" from="Timmy1" to="." method="_on_enemy_killed"]
[connection signal="killed" from="Timmy2" to="." method="_on_enemy_killed"]
[connection signal="killed" from="ToothWarrior1" to="." method="_on_enemy_killed"]
[connection signal="killed" from="Stalker1" to="." method="_on_enemy_killed"]
[connection signal="dialogue_finished" from="dialogue_node2" to="." method="_on_dialogue2_finished"]

[editable path="BackgroundThirdAct"]

[editable path="TileMap"]
